# serializer version: 1
# name: test_render_models[arrays]
  '''
  from typing import TypedDict
  
  class point(TypedDict):
      x: int
      y: int
  
  class array_combos(TypedDict):
      d_vvv: list[list[list[int]]]
      d_vvf: list[list[list[int]]]
      d_vfv: list[list[list[int]]]
      d_vff: list[list[list[int]]]
      d_fvv: list[list[list[int]]]
      d_fvf: list[list[list[int]]]
      d_ffv: list[list[list[int]]]
      d_fff: list[list[list[int]]]
  
  class array_of_objects(TypedDict):
      fixed_points: list[point]
      vla_points: list[point]
  
  type top_label = str
  type top_vla_points = list[point]
  
  '''
# ---
# name: test_render_models[jsmn-every-type.openapi]
  '''
  from typing import TypedDict
  
  class every_type(TypedDict):
      p_u8: int
      p_i8: int
      p_u16: int
      p_i16: int
      p_u32: int
      p_i32: int
      p_u64: int
      p_i64: int
      p_bool: bool
      p_f32: float
      p_f64: float
      p_str: str
  
  '''
# ---
# name: test_render_models[jsmn-vla.openapi]
  '''
  from typing import TypedDict
  
  class vla_combos(TypedDict):
      d_vvv: list[list[list[int]]]
      d_vvf: list[list[list[int]]]
      d_vfv: list[list[list[int]]]
      d_vff: list[list[list[int]]]
      d_fvv: list[list[list[int]]]
      d_fvf: list[list[list[int]]]
      d_ffv: list[list[list[int]]]
      d_fff: list[list[list[int]]]
  
  '''
# ---
# name: test_render_models[jsmn.openapi]
  '''
  from typing import NotRequired, TypedDict
  
  class child(TypedDict):
      flag: bool
      name: str
  
  class parent(TypedDict):
      nested: child
      count: NotRequired[int]
      items: list[int]
      tags: list[str]
  
  class sibling(TypedDict):
      count: NotRequired[int]
  
  '''
# ---
# name: test_render_models[optionals]
  '''
  from typing import NotRequired, TypedDict
  
  class detail(TypedDict):
      code: int
      message: str
  
  class record(TypedDict):
      id: int
      count: NotRequired[int]
      label: NotRequired[str]
      detail: NotRequired[detail]
      values: NotRequired[list[int]]
  
  '''
# ---
